--- a/src/app/pages/schedules/schedules.html
+++ b/src/app/pages/schedules/schedules.html
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col">
+    <div class="flex flex-col  gap-1">
       <h4>Status</h4>
       <select [(ngModel)]="selectedStatus" class="border border-gray-200 rounded-lg px-3 py-2 text-gray-700">
         <option *ngFor="let status of statuses" class="hover:bg-emerald-100">{{ status }}</option>
